--- a/app/src/main/res/layout/content_stock.xml
+++ b/app/src/main/res/layout/content_stock.xml
@@ -12,4 +12,10 @@
     tools:context="com.example.bukola_omotoso.inventorymanagement.StockActivity"
     tools:showIn="@layout/activity_stock">
 
+    <ListView
+        android:id="@+id/stock_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
 </RelativeLayout>
