--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
 
     <EditText
         android:id = "@+id/password"
+        android:inputType="textPassword"
         android:hint="@string/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
